--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,16 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".RankActivity"
+            android:name=".UI.RankActivity"
             android:exported="false" />
         <activity
-            android:name=".ProblemActivity"
+            android:name=".UI.ProblemActivity"
             android:exported="false" />
         <activity
-            android:name=".GameOverActivity"
+            android:name=".UI.GameOverActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".UI.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
