GameActivity, ProblemActivity 구현 완료 GameActitvity passing 조건 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:name=".UI.ProblemActivity"
             android:exported="false" />
         <activity
-            android:name=".UI.GameOverActivity"
+            android:name=".UI.GameActivity"
             android:exported="false" />
         <activity
             android:name=".UI.MainActivity"
