--- a/rank-api-server/src/main/resources/application.properties
+++ b/rank-api-server/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.username=sa
 spring.h2.console.enabled=true
 
 spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
